--- a/templates/concept/index.html.twig
+++ b/templates/concept/index.html.twig
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-10 col-xl-8 mx-auto">
-                <div class="p-5 bg-white shadow rounded">
+                <div class="p-5 bg-white shadow rounded m-5">
                     <!-- Bootstrap carousel-->
                     <div class="carousel slide" id="carouselExampleIndicators" data-ride="carousel">
                         <!-- Bootstrap carousel indicators [nav] -->
@@ -44,7 +44,7 @@
                                 <div class="media">
                                     <div class="media-body ml-3">
                                         <blockquote class="blockquote border-0 p-0">
-                                            <p class="font-italic lead"> <i class="fa fa-quote-left mr-3 text-primary"></i><strong>C'est la promotion qui fait l'artiste ou le degré zéro de l'art...John Hamon</strong></p>
+                                            <p class="font-italic lead"> <i class="fa fa-quote-left quote mr-3"></i><strong>C'est la promotion qui fait l'artiste ou le degré zéro de l'art...John Hamon</strong></p>
                                             <footer>
                                             </footer>
                                         </blockquote>
@@ -57,7 +57,7 @@
                                 <div class="media">
                                     <div class="media-body ml-3">
                                         <blockquote class="blockquote border-0 p-0">
-                                            <p class="font-italic lead"> <i class="fa fa-quote-left mr-3 text-primary"></i><strong>L'Art n'explique pas, il exprime par touches, le silence du ressenti...Kheira Chakor.</strong></p>
+                                            <p class="font-italic lead"> <i class="fa fa-quote-left quote mr-3"></i><strong>L'Art n'explique pas, il exprime par touches, le silence du ressenti...Kheira Chakor.</strong></p>
                                             <footer>
                                             </footer>
                                         </blockquote>
@@ -70,7 +70,7 @@
                                 <div class="media">
                                     <div class="media-body ml-3">
                                         <blockquote class="blockquote border-0 p-0">
-                                            <p class="font-italic lead"> <i class="fa fa-quote-left mr-3 text-primary"></i><strong>L'artiste transforme toujours tout sur son passage. Bien au-delà de ça, il transcende et transforme la forme par ce qu'il est...Malou Moulis.</strong></p>
+                                            <p class="font-italic lead"> <i class="fa fa-quote-left quote mr-3"></i><strong>L'artiste transforme toujours tout sur son passage. Bien au-delà de ça, il transcende et transforme la forme par ce qu'il est...Malou Moulis.</strong></p>
                                             <footer>
                                             </footer>
                                         </blockquote>
@@ -83,7 +83,7 @@
                                 <div class="media">
                                     <div class="media-body ml-3">
                                         <blockquote class="blockquote border-0 p-0">
-                                            <p class="font-italic lead"> <i class="fa fa-quote-left mr-3 text-primary"></i><strong>L'artiste, c'est celui qui place son âme au coeur de tout ce qu'il fait parce qu'il voit l'essence des gens, des choses et du monde qui l'entoure...M.M</strong></p>
+                                            <p class="font-italic lead"> <i class="fa fa-quote-left quote mr-3"></i><strong>L'artiste, c'est celui qui place son âme au coeur de tout ce qu'il fait parce qu'il voit l'essence des gens, des choses et du monde qui l'entoure...M.M</strong></p>
                                             <footer>
                                             </footer>
                                         </blockquote>
