--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -157,28 +157,34 @@
             <div class="row text-center justify-content-center my-4">
                 <!-- 1ER POINT -->
                 <div class="col-sm-5 col-lg-3">
-                    <div><img src="/images/logo_noir.svg">
-                        </img>
-                    </div><span>
-                    <strong>Reference site about</strong></span>
+                    <div>
+                        <img src="/images/decouvrez.png" class="pictos-concept">
+                    </div>
+                    <span><strong>Découvrez</strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
                 <!-- 2E POINT -->
                 <div class="col-sm-5 col-lg-3">
-                    <div><img src="/images/logo_noir.svg"></img>
-                    </div><span><strong>Reference site about</strong></span>
+                    <div>
+                        <img src="/images/gerez.png" class="pictos-concept">
+                    </div>
+                    <span><strong>Gérez</strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
                 <!-- 3E POINT -->
                 <div class="col-sm-5 col-lg-3">
-                    <div><img src="/images/logo_noir.svg"></img>
-                    </div><span><strong>Reference site about</strong></span>
+                    <div>
+                        <img src="/images/achetez.png" class="pictos-concept">
+                    </div>
+                    <span><strong>Achetez</strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
                 <!-- 4E POINT -->
                 <div class="col-sm-5 col-lg-3">
-                    <div><img src="/images/logo_noir.svg"></img>
-                    </div><span><strong>Reference site about</strong></span>
+                    <div>
+                        <img src="/images/venez.jpg" class="pictos-concept">
+                    </div>
+                    <span><strong>Venez</strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
             </div>
