--- a/templates/evenement/new.html.twig
+++ b/templates/evenement/new.html.twig
@@ -1,11 +1,23 @@
-{% extends 'base.html.twig' %}
+{% extends 'bo_base.html.twig' %}
 
-{% block title %}New Evenement{% endblock %}
+{% block title %}Art d'un temps - Nouvel Evénement{% endblock %}
 
-{% block body %}
-    <h1>Create new Evenement</h1>
+{% block content %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb bg-dark">
+        <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path("evenement_index")}}">Liste des événements</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Nouvel Evénement</li>
+    </ol>
+</nav>
+    <h1>Ajouter un nouvel événement</h1>
 
-    {{ include('evenement/_form.html.twig') }}
+    <div class="card mt-3 mb-3 bg-light">
+        <div class="card-body">
+        {{ include('evenement/_form.html.twig') }}
+        </div>
+    </div>
 
-    <a href="{{ path('evenement_index') }}">back to list</a>
+    <a href="{{ path('evenement_index') }}" class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
 {% endblock %}
