Ajout de l'affichage du membre/auteur sur les oeuvres

--- a/templates/profil/profil_admin.html.twig
+++ b/templates/profil/profil_admin.html.twig
@@ -18,7 +18,7 @@
         <div class="card">
             <div class="card-body">
             <h5 class="card-title">Les membres</h5>
-            <ul>
+            <ul class="ul-profil">
                 <li class="li-profil"><a href="{{ path("membre_index") }}">Voir les membres</a></li>
                 <li class="li-profil"><a href="{{ path("membre_new") }}">Ajouter un membre</a></li>
             </ul>
@@ -28,7 +28,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Les oeuvres</h5>
-                <ul>
+                <ul class="ul-profil">
                     <li class="li-profil"><a href="{{ path("bo_oeuvres") }}">Voir les oeuvres</a></li>
                     <li class="li-profil"><a href="{{ path("admin_oeuvre_new") }}">Ajouter une oeuvre</a></li>
                 </ul>
@@ -38,7 +38,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Les articles</h5>
-                <ul>
+                <ul class="ul-profil">
                     <li class="li-profil"><a href="{{ path("article_index") }}">Voir les articles</a></li>
                     <li class="li-profil"><a href="{{ path("article_new") }}">Ajouter un article</a></li>
                 </ul>
@@ -48,7 +48,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Les événements</h5>
-                <ul>
+                <ul class="ul-profil">
                     <li class="li-profil"><a href="{{ path("evenement_index") }}">Voir les événements</a></li>
                     <li class="li-profil"><a href="{{ path("evenement_new") }}">Ajouter un événement</a></li>
                 </ul>
@@ -58,7 +58,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Les commandes</h5>
-                <ul>
+                <ul class="ul-profil">
                     <li class="li-profil"><a href="">Voir les commandes</a></li>
                 </ul>
             </div>
