--- a/templates/profil/profil_artiste.html.twig
+++ b/templates/profil/profil_artiste.html.twig
@@ -52,7 +52,7 @@
 		<div class="card">
             <div class="card-body">
                 <h5 class="card-title">Mes oeuvres</h5>
-                <ul>
+                <ul class="ul-profil">
                     <li class="li-profil"><a href="{{ path("artiste_oeuvres") }}">Voir mes oeuvres</a></li>
                     <li class="li-profil"><a href="{{ path("artiste_oeuvre_new") }}">Ajouter une oeuvre</a></li>
                 </ul>
@@ -62,7 +62,7 @@
 		<div class="card">
 			<div class="card-body">
 				<h5 class="card-title">Mes articles</h5>
-				<ul>
+				<ul class="ul-profil">
 					<li class="li-profil"><a href="{{ path("artiste_articles") }}">Voir mes articles</a></li>
 					<li class="li-profil"><a href="{{ path("artiste_article_new") }}">Ajouter un article</a></li>
 				</ul>
