--- a/templates/oeuvre/artiste_oeuvre_show.html.twig
+++ b/templates/oeuvre/artiste_oeuvre_show.html.twig
@@ -24,8 +24,12 @@
                         <td>{{ oeuvre.categorie }}</td>
                     </tr>
                     <tr>
-                        <th>Nom_oeuvre</th>
+                        <th>Nom de l'oeuvre</th>
                         <td>{{ oeuvre.nomOeuvre }}</td>
+                    </tr>
+                    <tr>
+                        <th>Auteur</th>
+                        <td>{{ oeuvre.membre.pseudo }}</td>
                     </tr>
                     <tr>
                         <th>Année</th>
@@ -37,7 +41,7 @@
                     </tr>
                     <tr>
                         <th>Prix</th>
-                        <td>{{ oeuvre.prix }}</td>
+                        <td>{{ oeuvre.prix }} €</td>
                     </tr>
                     <tr>
                         <th>Stock</th>
