Correction thead page oeuvres artiste

--- a/templates/oeuvre/index.html.twig
+++ b/templates/oeuvre/index.html.twig
@@ -16,7 +16,7 @@
     <table class="table mt-3">
         <thead class="bg-light">
                 <th>Categorie</th>
-                <th>Nom_oeuvre</th>
+                <th>Nom de l'oeuvre</th>
                 <th>Auteur</th>
                 <th>Année</th>
                 <th>Prix</th>
