--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
 					        <div class="col-xl-7">
         					    <h2>Inscrivez vous à la newsletter</h2>
             
-            					<p class="text-center">Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
+            					<p class="">Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
             
             					<form action="" method="post">
             						<input class="ml-4 mr-4 pr-5 pb-2" type="email" name="email" placeholder="Votre email">
