--- a/templates/oeuvre/oeuvres.html.twig
+++ b/templates/oeuvre/oeuvres.html.twig
@@ -119,18 +119,19 @@
                  <div class="row ">
 
                     <!-- OEUVRE 1 -->
+                    {% for oeuvre in oeuvres %}
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
                         <article id="mea-o1" class="p-3">
                             
                             <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">{{ oeuvre.nomOeuvre }}</a></h3>
+                            <span class="details-oeuvre">{{ oeuvre.membre.pseudo }} - {{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</span>
                         </article>
                     </div>
-
+                    {% endfor %}
                     <!-- OEUVRE 2 -->
-                    <div class=" col-xl-4 col-lg-5 col-md-6 col-sm-8">
+                    {# <div class=" col-xl-4 col-lg-5 col-md-6 col-sm-8">
                         <article id="mea-o2" class="p-3">
                             
                             <img class="rounded" src="/images/oeuvre_mea_02.jpg">
@@ -138,10 +139,10 @@
                             <h3><a href="#">Name Art</a></h3>
                             <span class="details-oeuvre">Name Artiste - date</span>
                         </article>
-                    </div>
+                    </div> #}
 
                     <!-- OEUVRE 3 -->
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-8">
+                    {# <div class="col-xl-4 col-lg-4 col-md-6 col-sm-8">
                         <article id="mea-o1" class="p-3">
                             
                             <img class="rounded" src="/images/oeuvre_mea_02.jpg">
@@ -149,10 +150,10 @@
                             <h3><a href="#">Name Art</a></h3>
                             <span class="details-oeuvre">Name Artiste - date</span>
                         </article>
-                    </div>
+                    </div> #}
 
                     <!-- OEUVRE 4 -->
-                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-2">
+                    {# <div class="col-xl-2 col-lg-3 col-md-4 col-sm-2">
                         <article id="mea-o4" class="p-3">
                             
                             <img class="rounded" src="/images/oeuvre_mea_01.jpg">
@@ -160,11 +161,11 @@
                             <h3><a href="#">Name Art</a></h3>
                             <span class="details-oeuvre">Name Artiste - date</span>
                         </article>
-                    </div>
+                    </div> #}
                         
 
                         <!-- OEUVRE 5 -->
-                        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-8">
+                        {# <div class="col-xl-4 col-lg-6 col-md-6 col-sm-8">
                             <article id="mea-o1" class="p-3">
                                 
                                 <img class="rounded" src="/images/oeuvre_mea_02.jpg">
@@ -172,10 +173,10 @@
                                 <h3><a href="#">Name Art</a></h3>
                                 <span class="details-oeuvre">Name Artiste - date</span>
                             </article>
-                        </div>
+                        </div> #}
 
                         <!-- OEUVRE 6 -->
-                        <div class="col-xl-2 col-lg-2 col-md-4 col-sm-2">
+                        {# <div class="col-xl-2 col-lg-2 col-md-4 col-sm-2">
                             <article id="mea-o2" class="p-3">
                                 
                                 <img class="rounded" src="/images/oeuvre_mea_01.jpg">
@@ -183,27 +184,27 @@
                                 <h3><a href="#">Name Art</a></h3>
                                 <span class="details-oeuvre">Name Artiste - date</span>
                             </article>
-                        </div>
+                        </div> #}
 
                         <!-- OEUVRE 7 -->
-                        <div class="col-xl-2 col-lg-4 col-md-4 col-sm-4">
+                        {# <div class="col-xl-2 col-lg-4 col-md-4 col-sm-4">
                             <article id="mea-o1" class="p-3">
                                 <img class="rounded" src="/images/oeuvre_mea_01.jpg">
                                 </img>
                                 <h3><a href="#">Name Art</a></h3>
                                 <span class="details-oeuvre">Name Artiste - date</span>
                             </article>
-                        </div>
+                        </div> #}
 
                         <!-- OEUVRE 8 -->
-                        <div class="col-xl-4 col-lg-7 col-md-6 col-sm-8">
+                        {# <div class="col-xl-4 col-lg-7 col-md-6 col-sm-8">
                             <article id="mea-o4" class="p-3">
                                 <img class="rounded" src="/images/oeuvre_mea_02.jpg">
                                 </img>
                                 <h3><a href="#">Name Art</a></h3>
                                 <span class="details-oeuvre">Name Artiste - date</span>
                             </article>
-                        </div>
+                        </div> #}
                     {# </div> #}
                 </div>
             </div>
