Test affichage en mode all

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -124,6 +124,10 @@ a {
     color: black;
 }
 
+.img-oeuvre{
+    max-width: 300px;
+    margin: 10px;
+}
 .artiste {
     width: 150px;
     border-radius: 25px;
