--- a/templates/oeuvre/oeuvres.html.twig
+++ b/templates/oeuvre/oeuvres.html.twig
@@ -112,23 +112,22 @@
 
     <section>
         
-            <div class="container">
+        <div class="container">
 
-                    <h2 class="text-center">La sculpture</h2>
+            <h2 class="text-center">La sculpture</h2>
 
-                 <div class="row ">
+                <div class="row">
 
                     <!-- OEUVRE 1 -->
                     {% for oeuvre in oeuvres %}
-                    <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
-                        <article id="mea-o1" class="p-3">
-                            
-                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
-                            </img>
-                            <h3><a href="#">{{ oeuvre.nomOeuvre }}</a></h3>
-                            <span class="details-oeuvre">{{ oeuvre.membre.pseudo }} - {{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</span>
-                        </article>
-                    </div>
+                        <div class="col-xl-2 col-lg-3 col-md-4 col-sm-4">
+                            <article class="p-3">
+                                <img class="rounded img-oeuvre" src="{{ asset(dossier_images_oeuvres) ~ oeuvre.photo }}" alt="-">
+                                </img>
+                                <h3><a href="{{ path('oeuvre', {'id': oeuvre.id}) }}">{{ oeuvre.nomOeuvre }}</a></h3>
+                                <span class="details-oeuvre"> {{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</span>
+                            </article>
+                        </div>
                     {% endfor %}
                     <!-- OEUVRE 2 -->
                     {# <div class=" col-xl-4 col-lg-5 col-md-6 col-sm-8">
@@ -207,7 +206,7 @@
                         </div> #}
                     {# </div> #}
                 </div>
-            </div>
+        </div>
     </section>
 
     <section>
