--- a/templates/oeuvre/artiste_oeuvres.html.twig
+++ b/templates/oeuvre/artiste_oeuvres.html.twig
@@ -25,21 +25,21 @@
             </tr>
         </thead>
         <tbody>
-        {% for oeuvre in oeuvres %}
+        {% for o in oeuvres %}
             <tr class="text-table">
-                <td class="align-middle">{{ oeuvre.categorie }}</td>
-                <td class="align-middle">{{ oeuvre.nomOeuvre }}</td>
-                <td class="align-middle">{{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</td>
-                <td class="align-middle">{{ oeuvre.prix }}</td>
+                <td class="align-middle">{{ o.categorie }}</td>
+                <td class="align-middle">{{ o.nomOeuvre }}</td>
+                <td class="align-middle">{{ o.annee ? o.annee|date('Y-m-d') : '' }}</td>
+                <td class="align-middle">{{ o.prix }}</td>
                 <td class="align-middle">
-                    {% if oeuvre.photo is defined %}
-                    <img class="rounded img-membre-list" src="{{ asset(dossier_images_oeuvres) ~ oeuvre.photo }}" alt="-">
+                    {% if o.photo is defined %}
+                    <img class="rounded img-membre-list" src="{{ asset(dossier_images_oeuvres) ~ o.photo }}" alt="-">
                     {% endif %}
                 </td>
-                <td class="align-middle">{{ oeuvre.stock }}</td>
+                <td class="align-middle">{{ o.stock }}</td>
                 <td class="align-middle">
-                    <a href="{{ path('artiste_oeuvre_show', {'id': oeuvre.id}) }}" class="link-action"><i class="fas fa-eye"></i></a>
-                    <a href="{{ path('artiste_oeuvre_edit', {'id': oeuvre.id}) }}" class="link-action"><i class="fas fa-edit"></i></a>
+                    <a href="{{ path('artiste_oeuvre_show', {'id': o.id}) }}" class="link-action"><i class="fas fa-eye"></i></a>
+                    <a href="{{ path('artiste_oeuvre_edit', {'id': o.id}) }}" class="link-action"><i class="fas fa-edit"></i></a>
                 </td>
             </tr>
         {% else %}
