deploiement fonctionnalites profil et ajout panier

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,8 @@
 					        <div class="col-xl-7">
         					    <h2>Inscrivez vous à la newsletter</h2>
             
-            					<p class="text-center">Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
+            					<p class="text-left">Soyez informés des nouvelles oeuvres et artistes en ligne. <br>
+								Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
             
             					<form action="" method="post">
             						<input class="ml-4 mr-4 pr-5 pb-2" type="email" name="email" placeholder="Votre email">
@@ -83,7 +84,7 @@
     								</h2>
     							</div>
     
-    							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    							<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
     								<div class="card-body">
     									<ul>
                                             <a href="#"><li>A propos</li></a>
@@ -127,8 +128,9 @@
     								<div class="card-body">
     									<ul>
                                             <li><i class="fas fa-mobile-alt"></i> Par téléphone </li>
-                                            <li><i class="far fa-envelope"></i> Par mail en remplissant
-    										<a href="{{ path("formulaire_contact") }}">ce formulaire</a></li>
+											<br>
+                                            <li><i class="far fa-envelope"></i> Par mail en remplissant <br>
+    										<a href="{{ path("formulaire_contact") }}">👉 ce formulaire</a></li>
                                         </ul>
     									</p>
     								</div>
