--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,4 +1,9 @@
-{% extends 'base.html.twig' %} {% block title %}Accueil {% endblock %} {% block body %}
+{% extends 'base.html.twig' %} 
+
+{% block title %}Accueil {% endblock %} 
+
+{% block body %}
+
 <main>
     <section>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -57,10 +62,11 @@
                 <div class="col-xl-2 col-lg-6 col-md-4 col-sm-4">
                     <article id="mea-o1" class="p-3">
                         
-                        <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                        <img class="rounded" src="/images/oeuvre_mea_01.jpg" alt="photo de l'oeuvre" >
                         </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
+                        <h3><a href="">Oeuvre 1</a></h3>                      
+                        <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
+                        <a class="btn" href=" {{ path('ajout_panier', {'id': oeuvre.id}) }} ">Ajouter</a>
                     </article>
                 </div>
 
@@ -68,10 +74,10 @@
                 <div class=" col-xl-4 col-lg-6 col-md-6 col-sm-8">
                     <article id="mea-o2" class="p-3">
                         
-                        <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                        <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_02.jpg">
                         </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
+                        <h3><a href="#">Oeuvre</a></h3>
+                        <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                     </article>
                 </div>
 
@@ -79,10 +85,10 @@
                 <div class="col-xl-4 col-lg-8 col-md-6 col-sm-8">
                     <article id="mea-o1" class="p-3">
                         
-                        <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                        <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_02.jpg">
                         </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
+                        <h3><a href="#">Oeuvre</a></h3>
+                        <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                     </article>
                 </div>
 
@@ -90,10 +96,10 @@
                 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-2">
                     <article id="mea-o4" class="p-4">
                         
-                        <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                        <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_01.jpg">
                         </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
+                        <h3><a href="#">Oeuvre</a></h3>
+                        <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                     </article>
                 </div>
                     
@@ -103,10 +109,10 @@
                     <div class="col-xl-4 col-lg-8 col-md-6">
                         <article id="mea-o1" class="p-3">
                             
-                            <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                            <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_02.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                         </article>
                     </div>
 
@@ -114,41 +120,39 @@
                     <div class="col-xl-2 col-lg-4 col-md-4">
                         <article id="mea-o2" class="p-3">
                             
-                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                            <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_01.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                         </article>
                     </div>
 
                     <!-- OEUVRE 7 -->
                     <div class="col-xl-2 col-lg-6 col-md-4">
                         <article id="mea-o1" class="p-3">
-                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
+                            <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_01.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                         </article>
                     </div>
 
                     <!-- OEUVRE 8 -->
                     <div class="col-xl-4 col-lg-6 col-md-6">
                         <article id="mea-o4" class="p-3">
-                            <img class="rounded" src="/images/oeuvre_mea_02.jpg">
+                            <img alt="photo de l'oeuvre" class="rounded" src="/images/oeuvre_mea_02.jpg">
                             </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                            <h3><a href="#">Oeuvre</a></h3>
+                            <span class="details-oeuvre"><a href=""> Artiste </a> - date</span>
                         </article>
                     </div>
                 </div>
             </div>
         
-           <div class="d-flex justify-content-xl-end ps-xl-5 justify-content-sm-start"><button class="btn btn-warning">Voir toutes les oeuvres</button></div>
+           <div class="d-flex justify-content-xl-end ps-xl-5 justify-content-sm-start"><button href=" {{ path('oeuvres') }} " class="btn btn-warning">Voir toutes les oeuvres</button></div>
         </div>
        
     </section>
-
-    
     
     <section>
         <div class="container">
@@ -160,25 +164,25 @@
                     <div><img src="/images/logo_noir.svg">
                         </img>
                     </div><span>
-                    <strong>Reference site about</strong></span>
+                    <strong> Découvrir </strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
                 <!-- 2E POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div><img src="/images/logo_noir.svg"></img>
-                    </div><span><strong>Reference site about</strong></span>
+                    </div><span><strong> Gérer </strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
                 <!-- 3E POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div><img src="/images/logo_noir.svg"></img>
-                    </div><span><strong>Reference site about</strong></span>
+                    </div><span><strong> Acheter </strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
                 <!-- 4E POINT -->
                 <div class="col-sm-5 col-lg-3">
                     <div><img src="/images/logo_noir.svg"></img>
-                    </div><span><strong>Reference site about</strong></span>
+                    </div><span><strong> Visiter </strong></span>
                     <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
                 </div>
             </div>
