--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -8,7 +8,7 @@
         <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
         <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
         <li class="breadcrumb-item"><a href="{{ path('article_index')}}">Liste des articles</a></li> 
-        <li class="breadcrumb-item active" aria-current="page">Ajouter un nouvel article</li>
+        <li class="breadcrumb-item active" aria-current="page">{{ article.titre }}</li>
     </ol>
 </nav>
     <h1>{{ article.titre }}</h1>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="d-flex justify-content-between">
-        <a href="{{ path('article_index') }}"class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
+        <a href="{{ path('article_index') }}" class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
         {{ include('article/_delete_form.html.twig') }}
     </div>
  
