--- a/templates/evenement/edit.html.twig
+++ b/templates/evenement/edit.html.twig
@@ -1,13 +1,24 @@
-{% extends 'base.html.twig' %}
+{% extends 'bo_base.html.twig' %}
 
 {% block title %}Edit Evenement{% endblock %}
 
-{% block body %}
-    <h1>Edit Evenement</h1>
-
-    {{ include('evenement/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('evenement_index') }}">back to list</a>
-
-    {{ include('evenement/_delete_form.html.twig') }}
+{% block content %}
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb bg-dark">
+        <li class="breadcrumb-item"><a href="{{ path("accueil")}}">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path("profil_admin")}}">Profil de {{app.user.username}}</a></li>
+        <li class="breadcrumb-item"><a href="{{ path('article_index')}}">Liste des événements</a></li> 
+        <li class="breadcrumb-item active" aria-current="page">Modifier {{ evenement.titre }}</li>
+    </ol>
+</nav>
+    <h1>Modifier {{ evenement.titre }}</h1>
+    <div class="card mt-3 mb-3 bg-light">
+        <div class="card-body">
+            {{ include('evenement/_form.html.twig', {'button_label': 'Mise à jour'}) }}
+        </div>
+    </div>
+    <div class="d-flex justify-content-between">
+        <a href="{{ path('evenement_index') }}" class="btn"><i class="fas fa-arrow-left"></i> Retour</a>
+        {{ include('evenement/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
