--- a/templates/oeuvre/artiste_oeuvres.html.twig
+++ b/templates/oeuvre/artiste_oeuvres.html.twig
@@ -17,7 +17,7 @@
         <thead class="bg-light">
                 <th>Categorie</th>
                 <th>Nom_oeuvre</th>
-                <th>Auteur</th>
+                {# <th>Auteur</th> #}
                 <th>Année</th>
                 <th>Prix</th>
                 <th>Photo</th>
@@ -30,7 +30,7 @@
             <tr class="text-table">
                 <td class="align-middle">{{ oeuvre.categorie }}</td>
                 <td class="align-middle">{{ oeuvre.nomOeuvre }}</td>
-                <td class="align-middle">{{ oeuvre.membre.pseudo }}</td>
+                {# <td class="align-middle">{{ oeuvre.membre.pseudo }}</td> #}
                 <td class="align-middle">{{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</td>
                 <td class="align-middle">{{ oeuvre.prix }} €</td>
                 <td class="align-middle">
