légères modif base

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,7 +83,7 @@
     								</h2>
     							</div>
     
-    							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    							<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
     								<div class="card-body">
     									<ul>
                                             <a href="#"><li>A propos</li></a>
