--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -1,20 +1,70 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello EventController!{% endblock %}
+{% block title %}Evenement
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="container-fluid bc-top-page bg-info text-justify">
+		<div class="container pt-4 pb-4">
+			<h1 class="pb-4 titre-black text-justify text-center">venez à la rencontre d'Art d'un temps grace a nos evenements</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/Art-d-un-temps/src/Controller/EventController.php'|file_link(0) }}">src/Controller/EventController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/Art-d-un-temps/templates/event/index.html.twig'|file_link(0) }}">templates/event/index.html.twig</a></code></li>
-    </ul>
+			<h2 text-justify text-center>Art d'un temps organise chaque année plusieurs evenements tout au long de l'année, afin de vous faire entrer encore un peu plus dans le mode de l'art</h2>
+
+		</div>
+	</div>
+
+	<div>
+		<p class="text-justify text-center mt-4">En collaboration avec les artistes partenaires d'Art d'un temps, nous organisons chaque année plusieurs evenements. Au programme salons, vernissages, expositions, rencontres. avec Art d'un temps, l'art est toujours au plus prés de vous.</p>
+	</div>
+
+
+	<section class="pb-4">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="/images/slide-1.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption"></div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/slide-2.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption"></div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/slide-3.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption"></div>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Précédent</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Suivant</span>
+			</a>
+
+		</div>
+	</section>
+
+
 </div>
-{% endblock %}
+
+<div class="container-fluid bc-top-page bg-info text-justify">
+		<div class="container pt-4 pb-4">
+			<h1 class="pt-3 titre-black text-justify text-center">Nos prochains evenements</h1>
+
+		</div>
+	</div>
+
+
+<div>
+	<p class="text-justify text-center mt-4">Pour ètre sur de ne manquer aucun évènement, abonnez vous à notre
+		<a href="#">Newsletter</a>
+	</p>
+</div>{% endblock %}
