--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -7,7 +7,7 @@
 
 	<div class="container-fluid bc-top-page bg-info text-justify">
 		<div class="container pt-4 pb-4">
-			<h1 class="pb-4 titre-black text-justify text-center">venez à la rencontre d'Art d'un temps grace a nos evenements</h1>
+			<h1 class="pb-4 titre-black">venez à la rencontre d'Art d'un temps grace a nos evenements</h1>
 
 			<h2 text-justify text-center>Art d'un temps organise chaque année plusieurs evenements tout au long de l'année, afin de vous faire entrer encore un peu plus dans le mode de l'art</h2>
 
@@ -67,4 +67,6 @@
 	<p class="text-justify text-center mt-4">Pour ètre sur de ne manquer aucun évènement, abonnez vous à notre
 		<a href="#">Newsletter</a>
 	</p>
-</div>{% endblock %}
+</div>
+
+{% endblock %}
