--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -1,43 +1,72 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Evenement index{% endblock %}
+{% block title %}Evenement
+{% endblock %}
 
 {% block body %}
-    <h1>Evenement index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Ville</th>
-                <th>Cp</th>
-                <th>Adresse</th>
-                <th>Date</th>
-                <th>Titre</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for evenement in evenements %}
-            <tr>
-                <td>{{ evenement.id }}</td>
-                <td>{{ evenement.ville }}</td>
-                <td>{{ evenement.cp }}</td>
-                <td>{{ evenement.adresse }}</td>
-                <td>{{ evenement.date ? evenement.date|date('Y-m-d') : '' }}</td>
-                <td>{{ evenement.titre }}</td>
-                <td>
-                    <a href="{{ path('evenement_show', {'id': evenement.id}) }}">show</a>
-                    <a href="{{ path('evenement_edit', {'id': evenement.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<div class="container-fluid bc-top-page bg-info text-justify">
+		<div class="container pt-4 pb-4">
+			<h1 class="pb-4 titre-black">venez à la rencontre d'Art d'un temps grace a nos evenements</h1>
 
-    <a href="{{ path('evenement_new') }}">Create new</a>
+			<h2 class="text-justify text-center">Art d'un temps organise chaque année plusieurs evenements tout au long de l'année, afin de vous faire entrer encore un peu plus dans le mode de l'art</h2>
+
+		</div>
+	</div>
+
+	<div>
+		<p class="text-justify text-center mt-4">En collaboration avec les artistes partenaires d'Art d'un temps, nous organisons chaque année plusieurs evenements. Au programme salons, vernissages, expositions, rencontres. avec Art d'un temps, l'art est toujours au plus prés de vous.</p>
+	</div>
+
+
+	<section class="pb-4">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="/images/slide-1.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption"></div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/slide-2.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption"></div>
+				</div>
+				<div class="carousel-item">
+					<img src="/images/slide-3.jpg" class="d-block w-100" alt="...">
+					<div class="carousel-caption"></div>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Précédent</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Suivant</span>
+			</a>
+
+		</div>
+	</section>
+
+
+</div>
+
+<div class="container-fluid bc-top-page bg-info text-justify">
+		<div class="container pt-4 pb-4">
+			<h1 class="pt-3 titre-black text-justify text-center">Nos prochains evenements</h1>
+
+		</div>
+	</div>
+
+
+<div>
+	<p class="text-justify text-center mt-4">Pour ètre sur de ne manquer aucun évènement, abonnez vous à notre
+		<a href="#">Newsletter</a>
+	</p>
+</div>
+
 {% endblock %}
