--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -9,7 +9,7 @@
 		<div class="container pt-4 pb-4">
 			<h1 class="pb-4 titre-black">venez à la rencontre d'Art d'un temps grace a nos evenements</h1>
 
-			<h2 text-justify text-center>Art d'un temps organise chaque année plusieurs evenements tout au long de l'année, afin de vous faire entrer encore un peu plus dans le mode de l'art</h2>
+			<h2 class="text-justify text-center">Art d'un temps organise chaque année plusieurs evenements tout au long de l'année, afin de vous faire entrer encore un peu plus dans le mode de l'art</h2>
 
 		</div>
 	</div>
