--- a/templates/oeuvre/artiste_oeuvres.html.twig
+++ b/templates/oeuvre/artiste_oeuvres.html.twig
@@ -51,5 +51,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('admin_oeuvre_new') }}" class="btn">Ajouter une oeuvre</a>
+    <a href="{{ path('artiste_oeuvre_new') }}" class="btn">Ajouter une oeuvre</a>
 {% endblock %}
