--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -32,7 +32,7 @@
             <tfoot>
                 <tr>
                 <td colspan"3" class="text-right"> TOTAL =  </td>
-                <td> {{ $total }} </td>
+                <td> {{ 'total' }} </td>
                 <td>  </td>
                 </tr>
             </tfoot>
