--- a/templates/oeuvre/oeuvre.html.twig
+++ b/templates/oeuvre/oeuvre.html.twig
@@ -5,12 +5,12 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xl-8"><img src="/images/artiste_01.jpg " alt=" " width="500px"></div>
+			<div class="col-xl-8"><img class="tata" src="/images/tron.jpg " alt=" "></div>
 
 			<div class="col-xl-4">
-				<h1>Oeuvre assez long qui passe sur deux lignes</h1>
+				<h1 class="titre-black mb-xl-5">Oeuvre assez long qui passe sur deux lignes</h1>
 
-				<div class="d-flex justify-content-between ">
+				<div class="d-flex justify-content-between mb-xl-4">
 					<div>
 						<p>Type d'oeuvre, date,...</p>
 
@@ -27,7 +27,7 @@
 				<h2>A propos de l'artiste</h2>
 				<div class="d-flex ">
 					<div><img src="/images/artiste_01.jpg " alt=" "></div>
-					<div class="align-self-center ">
+					<div class="align-self-center ml-2">
 						<h4>Name Artiste</h4>
 						<p>details</p>
 					</div>
@@ -79,7 +79,7 @@
 				</div>
 				<hr>
 
-				<h3>A propos de l'oeuvre</h3>
+				<h2>A propos de l'oeuvre</h2>
 
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt distinctio ad aliquam voluptates odio velit. Voluptas quasi voluptate autem doloremque magnam et eos? Ipsum alias nam impedit dicta ad tenetur!</p>
 
@@ -94,9 +94,9 @@
 
 				<div class="d-flex ">
 
-					<p>02<br>Nov.2021</p>
+					<p class="mb-4"><span class="chiffre">02</span><br>Nov.2021</p>
 
-					<div>
+					<div class="ml-2 mt-2">
 						<p>Titre de l'événement
 							<br>détails, lieu, date de fin</p>
 						<a href="#">En savoir plus</a>
@@ -107,16 +107,31 @@
 
 				<div class="d-flex">
 					<p class="">Categorie</p>
-					<p class="">Technique</p>
-					<p class="">Artiste</p>
+					<p class="ml-3">Technique</p>
+					<p class="ml-3">Artiste</p>
 				</div>
 			</div>
 		</div>
-
+{# 
 		<h2>Oeuvre du même artiste</h2>
 
+		 
+                                <div class="card" style="width: 18rem;">
+                                    <img src="images/artiste_01.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h3 class="card-title">Titre article</h3>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    </div>
+                                    <div class="card-body">
+                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i></a>
+	
+
+                                    </div>
+                                </div>
+                        
+
         <div class="card" style="width: 18rem;">
-                                        <img src="images/slide_mea_03.jpg" class="card-img-top" alt="...">
+                                        <img src="images/artiste_01.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
                                         <h5 class="card-title">Card title</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,49 +139,63 @@
                                         <div class="card-body">
                                         <a href="#" class="card-link">Card link <i class="fas fa-chevron-right"></i></a>
                                         </div>
-                                    </div>
+                                    </div> #}
+ 
+		<h2>Le concept en 4 points</h2>
+
+<section>
+        <div class="mb-3 container">
+
+            <div class="row">
+                <div class="col-md-3 col-sm-6 ">
+                    <div>
+                        <img class="artiste" src="/images/artiste_01.jpg">
+                        </img>
+                    </div>
+                    <div>
+                        <p>Reference site about</class=>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 col-sm-6 ">
+                    <div>
+                        <img class="artiste" src="/images/artiste_02.jpg">
+                        </img>
+                    </div>
+                    <div>
+                       <p>Reference site about</class=>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 col-sm-6 ">
+                    <div>
+                        <img class="artiste" src="/images/artiste_01.jpg">
+                        </img>
+                    </div>
+                    <div>
+                        <p>Reference site about</class=>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 col-sm-6 ">
+                    <div>
+                        <img class="artiste" src="/images/artiste_02.jpg">
+                        </img>
+                    </div>
+                    <div>
+                        <p>Reference site about</class=>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-		<h2 class="text-center ">Le concept en 4 points</h2>
-		<div class="row">
-			<div class="col-6 justify-content-around col-xl-3">
-				<div>
-					<img class="artiste" src="/images/artiste_01.jpg"></img>
-			</div>
-			<div class="">
-				<p class=" text-center">Reference site about</p>
-				<p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-			</div>
-
-		</div>
-
-		<div class="col-6 justify-content-around col-xl-3">
-			<div>
-				<img class="artiste" src="/images/artiste_02.jpg"></img>
-		</div>
-		<div class="">
-			<p class=" text-center ">Reference site about</p>
-			<p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-		</div>
-
-	</div>
-
-	<div class="col-6 justify-content-around col-xl-3">
-		<div>
-			<img class="artiste" src="/images/artiste_01.jpg"></img>
-	</div>
-	<div class="">
-		<p class="text-center ">Reference site about</p>
-		<p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-	</div>
-
-</div>
-
-<div class="col-6 justify-content-around col-xl-3">
-	<div>
-		<img class="artiste" src="/images/artiste_02.jpg"></img>
-</div>
-<div class="">
-	<p class="text-center ">Reference site about</p>
-	<p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-</div></div>{% endblock %}
+</div>{% endblock %}
