--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -21,7 +21,7 @@
                     <div class="carousel-caption">
                         <h1>L'exposition du moment</h1>
                         <p class="text-slide-home">A ne rater sous aucun prétexte</p>
-                        <a class="btn" type="submit">En savoir plus</a>
+                        <a class="btn" type="submit" href="{{ path("event") }}">En savoir plus</a>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -51,96 +51,18 @@
 
             <h2 class="text-center">Dernières oeuvres en ligne</h2>
                     
-            <div class="row ">
+            <div class="card-columns">
 
-                <!-- OEUVRE 1 -->
-                <div class="col-xl-2 col-lg-6 col-md-4 col-sm-4">
-                    <article id="mea-o1" class="p-3">
-                        
-                        <img class="rounded" src="/images/oeuvre_mea_01.jpg">
-                        </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
-                    </article>
-                </div>
-
-                <!-- OEUVRE 2 -->
-                <div class=" col-xl-4 col-lg-6 col-md-6 col-sm-8">
-                    <article id="mea-o2" class="p-3">
-                        
-                        <img class="rounded" src="/images/oeuvre_mea_02.jpg">
-                        </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
-                    </article>
-                </div>
-
-                <!-- OEUVRE 3 -->
-                <div class="col-xl-4 col-lg-8 col-md-6 col-sm-8">
-                    <article id="mea-o1" class="p-3">
-                        
-                        <img class="rounded" src="/images/oeuvre_mea_02.jpg">
-                        </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
-                    </article>
-                </div>
-
-                <!-- OEUVRE 4 -->
-                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-2">
-                    <article id="mea-o4" class="p-4">
-                        
-                        <img class="rounded" src="/images/oeuvre_mea_01.jpg">
-                        </img>
-                        <h3><a href="#">Name Art</a></h3>
-                        <span class="details-oeuvre">Name Artiste - date</span>
-                    </article>
-                </div>
-                    
-                <div class="row d-none d-lg-flex">
-
-                    <!-- OEUVRE 5 -->
-                    <div class="col-xl-4 col-lg-8 col-md-6">
-                        <article id="mea-o1" class="p-3">
-                            
-                            <img class="rounded" src="/images/oeuvre_mea_02.jpg">
-                            </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
+                {% for oeuvre in oeuvres %}
+                <div class="card">
+                    <img class="card-img-top" src="{{ asset(dossier_images_oeuvres) ~ oeuvre.photo }}" alt="-">
+                        <article class="card-body">
+                        <h3><a href="{{ path('oeuvre', {'id': oeuvre.id}) }}">{{ oeuvre.nomOeuvre }}</a></h3>
+                            <span class="details-oeuvre">{{ oeuvre.membre.pseudo }} / {{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</span>
                         </article>
-                    </div>
-
-                    <!-- OEUVRE 6 -->
-                    <div class="col-xl-2 col-lg-4 col-md-4">
-                        <article id="mea-o2" class="p-3">
-                            
-                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
-                            </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
-                        </article>
-                    </div>
-
-                    <!-- OEUVRE 7 -->
-                    <div class="col-xl-2 col-lg-6 col-md-4">
-                        <article id="mea-o1" class="p-3">
-                            <img class="rounded" src="/images/oeuvre_mea_01.jpg">
-                            </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
-                        </article>
-                    </div>
-
-                    <!-- OEUVRE 8 -->
-                    <div class="col-xl-4 col-lg-6 col-md-6">
-                        <article id="mea-o4" class="p-3">
-                            <img class="rounded" src="/images/oeuvre_mea_02.jpg">
-                            </img>
-                            <h3><a href="#">Name Art</a></h3>
-                            <span class="details-oeuvre">Name Artiste - date</span>
-                        </article>
-                    </div>
                 </div>
+                {% endfor %}
+
             </div>
         
            <div class="d-flex justify-content-xl-end ps-xl-5 justify-content-sm-start"><button class="btn btn-warning">Voir toutes les oeuvres</button></div>
