--- a/templates/oeuvre/oeuvres.html.twig
+++ b/templates/oeuvre/oeuvres.html.twig
@@ -24,7 +24,7 @@
                         <img class="card-img-top" src="{{ asset(dossier_images_oeuvres) ~ peinture.photo }}" alt="-">
                             <article class="card-body">
                             <h3><a href="{{ path('oeuvre', {'id': peinture.id}) }}">{{ peinture.nomOeuvre }}</a></h3>
-                                <span class="details-oeuvre"> {{ peinture.annee ? peinture.annee|date('Y-m-d') : '' }}</span>
+                                <span class="details-oeuvre">{{ peinture.membre.pseudo }} /  {{ peinture.annee ? peinture.annee|date('Y-m-d') : '' }}</span>
                             </article>
                     </div>
                     {% endfor %}
@@ -40,7 +40,7 @@
                         <img class="card-img-top" src="{{ asset(dossier_images_oeuvres) ~ sculpture.photo }}" alt="-">
                             <article class="card-body">
                             <h3><a href="{{ path('oeuvre', {'id': sculpture.id}) }}">{{ sculpture.nomOeuvre }}</a></h3>
-                                <span class="details-oeuvre"> {{ sculpture.annee ? sculpture.annee|date('Y-m-d') : '' }}</span>
+                                <span class="details-oeuvre">{{ sculpture.membre.pseudo }} /  {{ sculpture.annee ? sculpture.annee|date('Y-m-d') : '' }}</span>
                             </article>
                     </div>
                     {% endfor %}
@@ -56,7 +56,7 @@
                         <img class="card-img-top" src="{{ asset(dossier_images_oeuvres) ~ ceramique.photo }}" alt="-">
                             <article class="card-body">
                             <h3><a href="{{ path('oeuvre', {'id': ceramique.id}) }}">{{ ceramique.nomOeuvre }}</a></h3>
-                                <span class="details-oeuvre"> {{ ceramique.annee ? ceramique.annee|date('Y-m-d') : '' }}</span>
+                                <span class="details-oeuvre">{{ ceramique.membre.pseudo }} /  {{ ceramique.annee ? ceramique.annee|date('Y-m-d') : '' }}</span>
                             </article>
                     </div>
                     {% endfor %}
