Correction Focus HP

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -104,6 +104,10 @@ a {
     padding-bottom: 50px;
 }
 
+.quote-focus{
+    width: 100px;
+}
+
 .text-slide-home {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     font-family: 'Roboto', sans-serif;
