--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -65,7 +65,7 @@
 
             </div>
         
-           <div class="d-flex justify-content-xl-end ps-xl-5 justify-content-sm-start"><button class="btn btn-warning">Voir toutes les oeuvres</button></div>
+           <div class="d-flex justify-content-xl-end ps-xl-5 justify-content-sm-start"><a class="btn btn-warning" href=" {{ path('oeuvres') }} ">Voir toutes les oeuvres</a></div>
         </div>
        
     </section>
@@ -83,7 +83,7 @@
                         <img src="/images/decouvrez.png" class="pictos-concept">
                     </div>
                     <span><strong>Découvrez</strong></span>
-                    <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
+                    <p>Visualisez toutes les oeuvres en quelques clics sans bouger de chez vous.</p>
                 </div>
                 <!-- 2E POINT -->
                 <div class="col-sm-5 col-lg-3">
@@ -91,7 +91,7 @@
                         <img src="/images/gerez.png" class="pictos-concept">
                     </div>
                     <span><strong>Gérez</strong></span>
-                    <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
+                    <p>Grâce à votre espace personnel, gérez vos contenus et rencontrez d'autres artistes.</p>
                 </div>
                 <!-- 3E POINT -->
                 <div class="col-sm-5 col-lg-3">
@@ -99,7 +99,7 @@
                         <img src="/images/achetez.png" class="pictos-concept">
                     </div>
                     <span><strong>Achetez</strong></span>
-                    <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
+                    <p>Acquérisez les oeuvres d'art en quelques clics sans bouger de votre canapé.</p>
                 </div>
                 <!-- 4E POINT -->
                 <div class="col-sm-5 col-lg-3">
@@ -107,7 +107,7 @@
                         <img src="/images/venez.jpg" class="pictos-concept">
                     </div>
                     <span><strong>Venez</strong></span>
-                    <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p>
+                    <p>Ne ratez aucun événement artistique pour partager des moments avec les artistes.</p>
                 </div>
             </div>
         </div>
@@ -115,15 +115,13 @@
     <section id="focus" class="container-fluid">
         <div class="container">
             <!-- BLOC TITRE -->
-            <div class="row">
-                <div class="col-sm-5 col-lg-4 position-relative">
-                    <h2 class="mt-3"><i class="quotes fas fa-angle-double-left"></i>
-                        <p>Focus du moment sur un<br>artiste ou une technique</p><i class="quotes fas fa-angle-double-right"></i></h2>
-                </div>
-            </div>
+            <img src="/images/quote.png" class="quote-focus mt-4"> 
+            <h2>L'aérographie</h2>
             <!-- BLOC DETAILS-->
-            <div class="m-3 row col-3 pb-4">
-                <p>Lorem Ipsum, giving information on its origins, as well as a random Lipsum generator.</p><button class="btn" type="submit">Découvrir</button></div>
+            <div class="col-12 col-lg-4 pb-3">
+                <p>L'aérographe est un pistolet à peinture miniature dont la taille est celle d'un stylo (plus ou moins gros suivant les utilisations).<br>Le principal intérêt est de pouvoir peindre ou colorer n'importe quel support à l'aide d'une infinité de médiums (peintures, pigments, encres) sans contact avec le support.</p>
+                <a class="btn" type="submit" href="#">Découvrir</a>
+            </div>
         </div>
     </section>
     <section id="cards" class="container-fluid pb-4">
@@ -132,7 +130,7 @@
           
                         <div class="row justify-content-around">
                             <div class="col-md-5 col-xl-3">
-                                <div class="card" style="width: 18rem;">
+                                <div class="card border-none" style="width: 18rem;">
                                     <img src="images/slide_mea_03.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
                                         <h3 class="card-title">Titre article</h3>
