--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -58,7 +58,7 @@
                     <img class="card-img-top" src="{{ asset(dossier_images_oeuvres) ~ oeuvre.photo }}" alt="-">
                         <article class="card-body">
                         <h3><a href="{{ path('oeuvre', {'id': oeuvre.id}) }}">{{ oeuvre.nomOeuvre }}</a></h3>
-                            <span class="details-oeuvre">{{ oeuvre.membre.pseudo }} / {{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</span>
+                            <span class="details-oeuvre">{{ oeuvre.membre.pseudo }} / {{ oeuvre.annee ? oeuvre.annee|date('d-m-Y') : '' }}</span>
                         </article>
                 </div>
                 {% endfor %}
