--- a/templates/oeuvre/artiste_oeuvres.html.twig
+++ b/templates/oeuvre/artiste_oeuvres.html.twig
@@ -29,7 +29,7 @@
             <tr class="text-table">
                 <td class="align-middle">{{ oeuvre.categorie }}</td>
                 <td class="align-middle">{{ oeuvre.nomOeuvre }}</td>
-                <td class="align-middle">{{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</td>
+                <td class="align-middle">{{ oeuvre.annee ? oeuvre.annee|date('d-m-Y') : '' }}</td>
                 <td class="align-middle">{{ oeuvre.prix }}</td>
                 <td class="align-middle">
                     {% if oeuvre.photo is defined %}
