--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Date</th>
-                <td>{{ evenement.date ? evenement.date|date('Y-m-d') : '' }}</td>
+                <td>{{ evenement.date ? evenement.date|date('d-m-Y') : '' }}</td>
             </tr>
             <tr>
                 <th>Titre</th>
