--- a/templates/profil/profil_membre.html.twig
+++ b/templates/profil/profil_membre.html.twig
@@ -61,7 +61,7 @@
 			</ul>
 			
 			<div class="col-lg-2">
-				<a href="">Voir le détail</a>
+				<a href="{{ path("panier")}}">Voir le détail</a>
 			</div>
 		
 		</div>
