--- a/templates/oeuvre/oeuvre.html.twig
+++ b/templates/oeuvre/oeuvre.html.twig
@@ -3,40 +3,48 @@
 
 {% block body %}
 
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xl-8"><img class="tata" src="/images/tron.jpg " alt=" "></div>
+	<div class="container">
+		<div class="row mb-3">
+			<div class="col-lg-8">
+				<img class="img-fp-oeuvre rounded" src="{{ asset(dossier_images_oeuvres) ~ oeuvre.photo }}" alt=" ">
+			</div>
 
-			<div class="col-xl-4">
-				<h1 class="titre-black mb-xl-5">Oeuvre assez long qui passe sur deux lignes</h1>
+			<div class="col-lg-4">
+				<h1 class="titre-black">{{ oeuvre.nomOeuvre }}</h1>
+				<hr>
+				<p class="infos-oeuvre">{{ oeuvre.categorie }} / {{ oeuvre.annee ? oeuvre.annee|date('Y-m-d') : '' }}</p>
+				<div class="">
+					<a href="#description">Voir la description detaillé</a>
+					<p class="prix">{{ oeuvre.prix }} €</p>
+				<div>
+				<a href="#" type="submit" class="btn">Acheter l'oeuvre</a>
+			</div>
+		</div>
 
-				<div class="d-flex justify-content-between mb-xl-4">
-					<div>
-						<p>Type d'oeuvre, date,...</p>
-
-						<a href="# ">Voir la description detaillé</a>
+				<h2 class="h2-fp">A propos de l'artiste</h2>
+				<hr>
+				<div class="d-flex">
+					<div class="col-3">
+						<img class="rounded img-fp-artiste" src="/images/artiste_01.jpg" alt="Photo profil artiste">	
 					</div>
 					<div>
-						<p>4879 €</p>
-
-						<button type="submit ">Achat</button>
+						<h4>{{ oeuvre.membre.pseudo }}</h4>
+						<p>{{ oeuvre.membre.email }} - {{ oeuvre.membre.ville }}</p>
 					</div>
 				</div>
 
-
-				<h2>A propos de l'artiste</h2>
-				<div class="d-flex ">
-					<div><img src="/images/artiste_01.jpg " alt=" "></div>
-					<div class="align-self-center ml-2">
-						<h4>Name Artiste</h4>
-						<p>details</p>
-					</div>
+				<h2 class="h2-fp">Tags</h2>
+				<hr>
+				<div class="d-flex">
+					<p class="tag badge badge-secondary m-1">{{ oeuvre.categorie }}</p>
+					<p class="tag badge badge-secondary m-1">{{ oeuvre.membre.pseudo }}</p>
+					<p class="tag badge badge-secondary m-1">{{ oeuvre.membre.ville }}</p>
 				</div>
 
 			</div>
 		</div>
 
-		<div class="row justify-content-xl-between">
+		<div id="description" class="row justify-content-xl-between">
 			<div class="col-xl-8">
 
 				<h2>Description</h2>
@@ -44,49 +52,28 @@
 				<hr>
 				<div class="d-flex justify-content-between ">
 
-					<p>Technique</p>
+					<p><strong>Technique</strong></p>
 
-					<p>peinture, acrylique</p>
+					<p>{{ oeuvre.categorie }}</p>
 				</div>
 				<hr>
 				<div class="d-flex justify-content-between ">
 
-					<p>Dimensions</p>
+					<p><strong>Dimensions</strong></p>
 
-					<p>154.5*68.5cm</p>
+					<p>{{ oeuvre.dimension }} cm</p>
 				</div>
-				<hr>
-				<div class="d-flex justify-content-between ">
 
-					<p>Support</p>
-
-					<p>toile</p>
-				</div>
-				<hr>
-				<div class="d-flex justify-content-between ">
-
-					<p>Encadrement</p>
-
-					<p>non</p>
-				</div>
-				<hr>
-				<div class="d-flex justify-content-between ">
-
-					<p>Tirage</p>
-
-					<p>10 exemplaires</p>
-
-				</div>
 				<hr>
 
-				<h2>A propos de l'oeuvre</h2>
+				<p><strong>A propos de l'oeuvre</strong></p>
 
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt distinctio ad aliquam voluptates odio velit. Voluptas quasi voluptate autem doloremque magnam et eos? Ipsum alias nam impedit dicta ad tenetur!</p>
+				<p class="description">{{ oeuvre.description }}</p>
 
 			</div>
 			<hr>
 
-			<div class="col-xl-4 ">
+			{# <div class="col-xl-4 ">
 
 				<h2>Evènement</h2>
 
@@ -101,101 +88,51 @@
 							<br>détails, lieu, date de fin</p>
 						<a href="#">En savoir plus</a>
 					</div>
-				</div>
+				</div> #}
 
-				<h2>Tags</h2>
-
-				<div class="d-flex">
-					<p class="">Categorie</p>
-					<p class="ml-3">Technique</p>
-					<p class="ml-3">Artiste</p>
-				</div>
+				
 			</div>
 		</div>
-{# 
-		<h2>Oeuvre du même artiste</h2>
 
-		 
-                                <div class="card" style="width: 18rem;">
-                                    <img src="images/artiste_01.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h3 class="card-title">Titre article</h3>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                    </div>
-                                    <div class="card-body">
-                                        <a href="#" class="card-link">Date publication<i class="fas fa-chevron-right"></i></a>
-	
-
-                                    </div>
-                                </div>
-                        
-
-        <div class="card" style="width: 18rem;">
-                                        <img src="images/artiste_01.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        </div>
-                                        <div class="card-body">
-                                        <a href="#" class="card-link">Card link <i class="fas fa-chevron-right"></i></a>
-                                        </div>
-                                    </div> #}
- 
-		<h2>Le concept en 4 points</h2>
-
-<section>
-        <div class="mb-3 container">
-
-            <div class="row">
-                <div class="col-md-3 col-sm-6 ">
-                    <div>
-                        <img class="artiste" src="/images/artiste_01.jpg">
-                        </img>
-                    </div>
-                    <div>
-                        <p>Reference site about</class=>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-                    </div>
-
-                </div>
-
-                <div class="col-md-3 col-sm-6 ">
-                    <div>
-                        <img class="artiste" src="/images/artiste_02.jpg">
-                        </img>
-                    </div>
-                    <div>
-                       <p>Reference site about</class=>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-                    </div>
-
-                </div>
-
-                <div class="col-md-3 col-sm-6 ">
-                    <div>
-                        <img class="artiste" src="/images/artiste_01.jpg">
-                        </img>
-                    </div>
-                    <div>
-                        <p>Reference site about</class=>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-                    </div>
-
-                </div>
-
-                <div class="col-md-3 col-sm-6 ">
-                    <div>
-                        <img class="artiste" src="/images/artiste_02.jpg">
-                        </img>
-                    </div>
-                    <div>
-                        <p>Reference site about</class=>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, officiis consequuntur. Dicta molestias qui reiciendis animi commodi ipsa ad, ex quidem numquam ullam laudantium quas expedita pariatur debitis, incidunt obcaecati.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+		<section>
+			<div class="container">
+				<h2 class="my-3">Art d'un temps, c'est...</h2>
+				<!-- LES POINTS DU CONCEPT -->
+				<div class="row text-center justify-content-center my-4">
+					<!-- 1ER POINT -->
+					<div class="col-sm-5 col-lg-3">
+						<div>
+							<img src="/images/decouvrez.png" class="pictos-concept">
+						</div>
+						<span><strong>Découvrez</strong></span>
+						<p>Visualisez toutes les oeuvres en quelques clics sans bouger de chez vous.</p>
+					</div>
+					<!-- 2E POINT -->
+					<div class="col-sm-5 col-lg-3">
+						<div>
+							<img src="/images/gerez.png" class="pictos-concept">
+						</div>
+						<span><strong>Gérez</strong></span>
+						<p>Grâce à votre espace personnel, gérez vos contenus et rencontrez d'autres artistes.</p>
+					</div>
+					<!-- 3E POINT -->
+					<div class="col-sm-5 col-lg-3">
+						<div>
+							<img src="/images/achetez.png" class="pictos-concept">
+						</div>
+						<span><strong>Achetez</strong></span>
+						<p>Acquérisez les oeuvres d'art en quelques clics sans bouger de votre canapé.</p>
+					</div>
+					<!-- 4E POINT -->
+					<div class="col-sm-5 col-lg-3">
+						<div>
+							<img src="/images/venez.jpg" class="pictos-concept">
+						</div>
+						<span><strong>Venez</strong></span>
+						<p>Ne ratez aucun événement artistique pour partager des moments avec les artistes.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
 </div>{% endblock %}
