gestion du CRUD et ajout panier 2.0

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -42,7 +42,7 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{{ path("panier")}}">
+								<a class="nav-link" href=" {{ path('panier') }} ">
 									Panier
 									<i class="fas fa-shopping-cart"></i>
 								</a>
