--- a/templates/panier/edit.html.twig
+++ b/templates/panier/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Panier{% endblock %}
+{% block title %}Modifier Panier{% endblock %}
 
 {% block body %}
-    <h1>Edit Panier</h1>
+    <h1>Modifier Panier</h1>
 
     {{ include('panier/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('panier_index') }}">back to list</a>
+    <a href="{{ path('panier_index') }}"> Retour </a>
 
     {{ include('panier/_delete_form.html.twig') }}
 {% endblock %}
