--- a/templates/panier/new.html.twig
+++ b/templates/panier/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Panier{% endblock %}
+{% block title %}Nouveau Panier{% endblock %}
 
 {% block body %}
-    <h1>Create new Panier</h1>
+    <h1>Nouveau Panier</h1>
 
     {{ include('panier/_form.html.twig') }}
 
-    <a href="{{ path('panier_index') }}">back to list</a>
+    <a href="{{ path('panier_index') }}"> Retour </a>
 {% endblock %}
