Modifs mineures et ajout bouton panier sur oeuvre

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,10 +38,10 @@
 					        <div class="col-xl-7">
         					    <h2>Inscrivez vous à la newsletter</h2>
             
-            					<p class="">Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
+            					<p class="pl-3">Soyez informés des nouvelles oeuvres et artistes en ligne. Vous pourrez également recevoir des articles dédiés selon vos critères personnalisés</p>
             
             					<form action="" method="post">
-            						<input class="ml-4 mr-4 pr-5 pb-2" type="email" name="email" placeholder="Votre email">
+            						<input class="ml-3 mr-4 pr-5 pb-2" type="email" name="email" placeholder="Votre email">
             
             						<button class="btn" type="submit">S'inscrire</button>
             					</form>
@@ -138,7 +138,7 @@
 
 					<br>
 					<div class="text-center">
-						&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ.
+						&copy;{{ "now"|date("Y") }}. Tous droits réservés, Design by ESDJ - Best Team ever 🎨
 					</div>
 				</div>
 				</footer>
