Suppr href Achat sur FP Oeuvre pour debug

--- a/templates/oeuvre/oeuvre.html.twig
+++ b/templates/oeuvre/oeuvre.html.twig
@@ -17,7 +17,7 @@
 					<a href="#description">Voir la description detaillé</a>
 					<p class="prix">Prix: {{ oeuvre.prix }} €</p>
 				<div>
-				<a href=" {{ path('ajout_panier') }} " type="submit" class="btn">Acheter l'oeuvre</a>
+				<a href="#" type="submit" class="btn">Acheter l'oeuvre</a>
 			</div>
 		</div>
 
